--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@
 
           <ul class="social-list">
             <li class="social-item">
-              <a href="#" class="social-link">
+              <a href="https://www.linkedin.com/in/najmeddine-jarray-531420238/" class="social-link">
                 <ion-icon name="logo-facebook"></ion-icon>
               </a>
             </li>
 
             <li class="social-item">
-              <a href="#" class="social-link">
+              <a href="https://github.com/jarray-najm" class="social-link">
                 <ion-icon name="logo-github"></ion-icon>
               </a>
             </li>
 
             <li class="social-item">
-              <a href="#" class="social-link">
+              <a href="https://www.instagram.com/jarray__najmeddine/" class="social-link">
                 <ion-icon name="logo-instagram"></ion-icon>
               </a>
             </li>
