--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ systems engineering : Parcours : Embedded systems and IoT
             </ol>
           </section>
 
-          <!-- <section class="timeline">
+        <section class="timeline">
             <div class="title-wrapper">
               <div class="icon-box">
                 <ion-icon name="book-outline"></ion-icon>
@@ -666,7 +666,7 @@ Technologies : Angular – Node.Js – Sequelize.Js – SQL
             </ol>
           </section>
 
-          <section class="skill">
+          <!-- <section class="skill">
             <h3 class="h3 skills-title">My Resume</h3>
    
             <ul class="skills-list content-card">
@@ -688,7 +688,7 @@ Technologies : Angular – Node.Js – Sequelize.Js – SQL
             </div>
              
             </ul> 
-          </section> -->
+          </section>  -->
 
 
 
