--- a/index.html
+++ b/index.html
@@ -545,10 +545,10 @@
             <ul class="skills-list content-card">
               <li class="skills-item">
                  <div class="btn-group">
-                <a href="./assets/pdf/CV__Najm Eddine - English.pdf" class="btn  h5 active">Download CV English</a>
+                <a href="./Najmeddine Jarray CV English.pdf" class="btn  h5 active">Download CV English</a>
             </div><br>
                        <div class="btn-group">
-                <a href="./assets/pdf/CV__Najm Eddine.pdf" class="btn h5  active">Download CV Frensh</a>
+                <a href="./Najmeddine Jarray CV Francais.pdf" class="btn h5  active">Download CV Frensh</a>
             </div>
             </ul> 
           </section>
